--- a/application/static/css/Paraphrase.css
+++ b/application/static/css/Paraphrase.css
@@ -106,7 +106,7 @@ body > .container {
 }
 
 h1 {
-  margin-top: 30px;
+  padding-top: 30px;
   font-weight: bolder;
   text-align: center;
 }
@@ -137,9 +137,11 @@ h3 {
 	background: #fff;
 }
 
-.dropdown-item:first-child, .dropdown-toggle {
+.dropdown:last-child > .dropdown-toggle, .dropdown:last-child > .dropdown-menu > .dropdown-item:first-child {
   background: linear-gradient(to right, #FF4B2B, #FF416C);
 }
+
+
 
 form, .result {
   width: 48%;
