--- a/application/static/css/grammar.css
+++ b/application/static/css/grammar.css
@@ -7,11 +7,7 @@ body > .container {
     height: 100%;
 }
 
-.nav-item:nth-child(2) > .nav-link {
-	background: #fff;
-}
-
-.dropdown-item:nth-child(3), .dropdown-toggle {
+.dropdown:last-child > .dropdown-toggle, .dropdown:last-child > .dropdown-menu > .dropdown-item:nth-child(3) {
     background: linear-gradient(to right, #FF4B2B, #FF416C);
   }
 
@@ -36,7 +32,7 @@ body > .container {
 }
 
 h1 {
-    margin-top: 30px;
+    padding-top: 30px;
     text-align: center;
     font-weight: bolder;
 }
@@ -47,4 +43,10 @@ h1 {
 
 h3 {
     margin-top: 30px;
+}
+
+.btn-primary {
+    margin-top: 30px;
+    padding: 12px 25px;
+    font-size: 20px;
 }
