--- a/application/static/css/header&footer.css
+++ b/application/static/css/header&footer.css
@@ -25,6 +25,11 @@ body {
 }
 .nav {
     box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16), 0 2px 10px 0 rgba(0,0,0,0.12);
+    position: fixed;
+    z-index: 1;
+    width: 100%;
+    background-color: #fff;
+    top: 0;
 }
 .navbar{
     background-color: #ffffff;
