--- a/application/static/css/text.css
+++ b/application/static/css/text.css
@@ -4,7 +4,7 @@ body > .container {
 }
 
 h1 {
-  margin-top: 30px;
+  padding-top: 30px;
   font-weight: bolder;
   text-align: center;
 }
@@ -31,11 +31,7 @@ h3 {
   box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
 }
 
-.nav-item:nth-child(2) > .nav-link {
-	background: #fff;
-}
-
-.dropdown-item:nth-child(2) .dropdown-toggle {
+.dropdown:last-child > .dropdown-toggle, .dropdown:last-child > .dropdown-menu > .dropdown-item:nth-child(2) {
   background: linear-gradient(to right, #FF4B2B, #FF416C);
 }
 
