--- a/application/templates/base.html
+++ b/application/templates/base.html
@@ -77,7 +77,7 @@
       </li>
       {% endif %}
     </ul>
-<div class="container">
+<div style="margin-top: 60px;" class="container">
   {% block content %}
 
   {% endblock %}
