--- a/application/templates/plagiarism_check.html
+++ b/application/templates/plagiarism_check.html
@@ -26,7 +26,7 @@
       apiKey: "vXj90M2ifAvu8fS739jFKepTXtES72ur59sGR5TPK9c="
     </script>
   </head>
-  <h1 style="text-align: center;margin-top: 30px; font-weight: bolder;">Plagiarism Check</h1>
+  <h1 style="text-align: center; padding: 30px; font-weight: bolder;">Plagiarism Check</h1>
   <hr>
   <form method="POST">
       {{ form.hidden_tag() }}
